
Release 2.4

2009-01-08
 Added backslash plugin.

2009-01-07
 Better handling of negative Subversion revisions

2008-11-19
 Bug fix in Clip Diff Capture

2008-11-10
 Improved patch parsing.
 Includ Twapi in windows executable

2008-11-06
 Added Capture in Clip Diff on Windows.
 Handle Rev and Plugin at the same time.

2008-09-23
 Added log button for version control.
 Added commit for Subversion.
 Added log view for CVS and Subversion.
 Do not parse GIT revisions.

2008-05-23
 Started on plugins.

2008-04-09
 Added color option for unchanged text.

2008-03-07
 Added -review to do full tree view like a patch.

2008-03-05
 Support for Bazaar.

2008-02-07
 Support for Mercurial.

2008-02-06
 Fixed a bug in patch view. A change last in patch was missed.

2008-01-23
 Added Subversion support.
 Added -cvs and -svn for selecting version detection preference.

2008-01-18
 Adjust to use Tile overall.
 Adjustments to new dirdiff processing.

2007-12-26
 Complete rework of directory diff window.
 Requires Tile.

2007-12-09
 Support command line "-" to read a patch from std input.

Release 2.3

2007-12-05
 Added option for wide map. (Code from Elliot)

2007-11-27
 Print line numbers in PDF regardless of number of digits.
 Try if anything from the command line is a kit. [FR 3806]

2007-09-25
 Always show at least one line in preprocess dialog.
 Started on GIT support. [FR 3736]
 Reorganising revision control implementation.
 Added -printpdf command line option.

Release 2.2

2007-03-31
 Fixed a bug that caused PS print not to run.
 Corrected a bug that made highlight of changes get misaligned.
 Initialise nonewline and autoclose earlier to make sure they work.

2007-02-24
 Added experimental -nonewline command option.

2007-02-23
 Added -close command option.

2007-02-17
 Added first version of PDF print.
 Kits are mounted readonly.

2007-01-29
 Finished dirdiff filters. [FR 3040]

2007-01-28
 Started on dirdiff filters.
 Added dirdiff preferences dialog. 

2007-01-09